# nitrolaunch

./: .gitignore  COMPILING.md  COMPILING_GUI.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
crates/auth/: Cargo.toml
crates/auth/src/: db.rs  lib.rs  mc.rs  mc_msa.rs  passkey.rs
crates/cli/: Cargo.toml
crates/cli/src/: image_cache.rs  main.rs  output.rs  prompt.rs  secrets.rs
crates/cli/src/commands/: account.rs  config.rs  files.rs  instance.rs  log.rs  mod.rs  modpack.rs  package.rs  plugin.rs  profile.rs  template.rs  try.rs  user.rs  version.rs
crates/config/: Cargo.toml
crates/config/src/: account.rs  instance.rs  lib.rs  package.rs  preferences.rs  profile.rs  template.rs  user.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  instance.rs  lib.rs  version.rs
crates/core/src/account/: auth.rs  cosmetics.rs  mod.rs
crates/core/src/io/: config.rs  logs.rs  minecraft.rs  mod.rs  persistent.rs  update.rs
crates/core/src/launch/: configuration.rs  mod.rs  process.rs  server.rs
crates/core/src/net/: java.rs  mod.rs
crates/core/src/user/: auth.rs  mod.rs
crates/core/src/util/: json.rs  secrets.rs  versions.rs
crates/gui2/: Cargo.toml  theme.json
crates/gui2/src/: dependency.rs  event.rs  icons.rs  instance_manager.rs  main.rs  output.rs  prelude.rs  routing.rs  state.rs  theme.rs
crates/gui2/src/components/: footer.rs  mod.rs  (+1 more)
crates/instance/: Cargo.toml
crates/instance/src/: lib.rs  lock.rs
crates/mods/: Cargo.toml
crates/mods/src/: fabric_quilt.rs  forge.rs  lib.rs  paper.rs  sponge.rs
crates/net/: Cargo.toml
crates/net/src/: curseforge.rs  download.rs  filebin.rs  lib.rs  modrinth.rs  neoforge.rs  smithed.rs
crates/options/: Cargo.toml
crates/options/src/: lib.rs  read.rs
crates/pkg/: Cargo.toml
crates/pkg/src/: addon.rs  declarative.rs  lib.rs  metadata.rs  overrides.rs  properties.rs  repo.rs  resolve.rs  script_eval.rs
crates/pkg_gen/: Cargo.toml
crates/pkg_gen/src/: lib.rs  modrinth.rs  relation_substitution.rs  smithed.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: control.rs  hook_call.rs  hooks.rs  input_output.rs  interface.wit  lib.rs  plugin.rs  try_read.rs
crates/shared/: Cargo.toml
crates/shared/src/: java_args.rs  lib.rs  loaders.rs  minecraft.rs  modifications.rs  nitro_executable.rs  output.rs  pkg.rs  uuid.rs  versions.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: migrated.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: cli.rs  data.rs  instance_manager.rs  main.rs  output.rs  task_manager.rs
gui2/: Cargo.toml  Dioxus.toml
gui2/assets/styling/: main.css
gui2/src/: main.rs
gui2/src/components/: icon.rs  mod.rs
plugins/: Cargo.toml  Makefile  build.rs
plugins/plugins/addon_share/: Cargo.toml  lib.rs  plugin.json
plugins/plugins/archive/: main.rs  plugin.json
plugins/plugins/args/: Cargo.toml  lib.rs  main.rs  plugin.json
plugins/plugins/auto_mcs/: Cargo.toml  lib.rs  main.rs  plugin.json
plugins/plugins/automate/: Cargo.toml  lib.rs  main.rs  plugin.json
plugins/plugins/backup/: Cargo.toml  backup.rs  lib.rs  main.rs  plugin.json
plugins/plugins/beet/: main.rs  plugin.json
plugins/plugins/better_jsons/: Cargo.toml  lib.rs  main.rs  plugin.json
plugins/plugins/cleanup/: main.rs  plugin.json
plugins/plugins/completions/: Cargo.toml  lib.rs  plugin.json
plugins/plugins/config_split/: Cargo.toml  lib.rs  main.rs  plugin.json
plugins/plugins/curseforge_api/: main.rs  plugin.json
plugins/plugins/custom_files/: Cargo.toml  lib.rs  main.rs  plugin.json
plugins/plugins/discord_status/: main.rs  plugin.json
plugins/plugins/docs/: main.rs  plugin.json
plugins/plugins/doctor/: Cargo.toml  lib.rs  plugin.json  signature.rs  signatures.json
plugins/plugins/extra_versions/: plugin.json
plugins/plugins/fabric_quilt/: main.rs  plugin.json
plugins/plugins/forge/: main.rs  plugin.json
plugins/plugins/gamepad/: gamepad.js  plugin.json
plugins/plugins/gen_pkg/: batched.rs  main.rs  plugin.json
plugins/plugins/glfw_fix/: Cargo.toml  lib.rs  main.rs  plugin.json
plugins/plugins/graalvm/: Cargo.toml  lib.rs  plugin.json
plugins/plugins/guardian/: Cargo.toml  lib.rs  main.rs  plugin.json  threat.rs
plugins/plugins/lang/: plugin.json
plugins/plugins/mcvm_transfer/: plugin.json
plugins/plugins/modpacks/: Cargo.toml  lib.rs  plugin.json
plugins/plugins/modrinth/: main.rs  plugin.json
plugins/plugins/modrinth_api/: main.rs  plugin.json
plugins/plugins/mojang_transfer/: Cargo.toml  lib.rs  plugin.json
plugins/plugins/multimc_transfer/: main.rs  plugin.json
plugins/plugins/multiply/: Cargo.toml  lib.rs  main.rs  plugin.json
plugins/plugins/nitro_transfer/: Cargo.toml  lib.rs  main.rs  plugin.json
plugins/plugins/octane/: Cargo.toml  args.rs  cds.rs  lib.rs  plugin.json
plugins/plugins/options/: controls.rs  main.rs  plugin.json
plugins/plugins/packhost/: main.rs  plugin.json
plugins/plugins/paper/: main.rs  plugin.json
plugins/plugins/prism_transfer/: main.rs  plugin.json
plugins/plugins/profile_share/: export.js  import.js  main.rs  plugin.json
plugins/plugins/server_restart/: main.rs  plugin.json
plugins/plugins/share/: Cargo.toml  export_template.js  import_template.js  lib.rs  plugin.json  template.rs
plugins/plugins/shortcut/: Cargo.toml  lib.rs  plugin.json
plugins/plugins/skin_stealer/: Cargo.toml  lib.rs  plugin.json
plugins/plugins/smithed/: main.rs  plugin.json
plugins/plugins/smithed_api/: main.rs  plugin.json
plugins/plugins/sponge/: main.rs  plugin.json
plugins/plugins/stats/: Cargo.toml  lib.rs  main.rs  plugin.json  stat_card.html
plugins/plugins/template_share/: main.rs  plugin.json
plugins/plugins/themes/: ghost.css  minecraft.css  plugin.json  sleek.css  vertical_instance_list.css
plugins/plugins/webtools/: Cargo.toml  all_tools.html  lib.rs  main.rs  plugin.json
plugins/plugins/weld/: local_plugin.json  nitro_weld.py  plugin.json
plugins/plugins/xmcl_transfer/: main.rs  plugin.json
plugins/plugins/zulu/: Cargo.toml  lib.rs  plugin.json
(+438 files in other folders)
