[package]
name = "nitrolaunch"
version = "0.27.0"
description = "A fast, extensible, and powerful Minecraft launcher"
keywords = ["minecraft", "launcher", "game", "mc"]
exclude = ["/docs", "/tools"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["CarbonSmasher"]
repository = "https://github.com/Nitrolaunch/nitrolaunch"
rust-version = "1.89.0"
categories = ["games"]

[workspace.lints.rust]

[lints]
workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
name = "nitrolaunch"
path = "src/lib.rs"

[workspace]
members = [
	"crates/auth",
	"crates/cli",
	"crates/config",
	"crates/core",
	"crates/mods",
	"crates/net",
	"crates/options",
	"crates/parse",
	"crates/pkg",
	"crates/pkg_gen",
	"crates/plugin",
	"crates/shared",
	"crates/tools",
	"gui/src-tauri",
	"plugins",
	"plugins/plugins/args",
	"plugins/plugins/auto_mcs",
	"plugins/plugins/automate",
	"plugins/plugins/config_split",
	"plugins/plugins/custom_files",
	"plugins/plugins/glfw_fix",
	"plugins/plugins/graalvm",
	"plugins/plugins/mojang_transfer",
	"plugins/plugins/multiply",
	"plugins/plugins/zulu",
]

[features]
disable_instance_update_packages = []
schema = [
	"dep:schemars",
	"nitro_config/schema",
	"nitro_core/schema",
	"nitro_pkg/schema",
	"nitro_shared/schema",
]

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.73"
base64 = "0.22.0"
bytes = "1.4.0"
cfg-match = "0.2.1"
chrono = "0.4.42"
clap = { version = "4.5.4", features = ["derive"] }
color-print = "0.3.6"
directories = "5.0.0"
glob = "0.3.1"
hex = "0.4.3"
home = "=0.5.11"
inquire = { version = "0.6.2", default-features = false, features = [
	"crossterm",
] }
iso8601-timestamp = "0.2.17"
itertools = "0.11.0"
libflate = "2.1.0"
nitrolaunch = { path = ".", version = "0.27.0" }
nitro_auth = { path = "crates/auth", version = "0.27.0" }
nitro_core = { path = "crates/core", version = "0.27.0" }
nitro_config = { path = "crates/config", version = "0.27.0" }
nitro_mods = { path = "crates/mods", version = "0.27.0" }
nitro_net = { path = "crates/net", version = "0.27.0" }
nitro_options = { path = "crates/options", version = "0.27.0" }
nitro_parse = { path = "crates/parse", version = "0.27.0" }
nitro_pkg = { path = "crates/pkg", version = "0.27.0" }
nitro_pkg_gen = { path = "crates/pkg_gen", version = "0.27.0" }
nitro_plugin = { path = "crates/plugin", version = "0.27.0", default-features = false, features = [
	"host",
] }
nitro_shared = { path = "crates/shared", version = "0.27.0" }
oauth2 = "4.4.2"
pin-project-lite = "0.2.16"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12.15", default-features = false, features = [
	"json",
	"rustls-tls",
] }
rsa = { version = "0.9.6", default-features = false, features = [
	"std",
	"u64_digit",
] }
schemars = { version = "0.8.20" }
serde = { version = "1.0.202", features = ["derive", "rc"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
showfile = "0.1.1"
simd-json = { version = "0.13.10", features = ["value-no-dup-keys"] }
sysinfo = "0.34.2"
sys-locale = "0.3.1"
tar = "0.4.38"
termimad = "0.31.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
version-compare = "0.2.0"
wasmtime = { version = "39.0.0", default-features = false, features = [
	"runtime",
	"cranelift",
	"async",
] }
wasmtime-wasi = "39.0.1"
wit-bindgen = "0.48.1"
which = "6.0.1"
zip = { version = "3.0.0", default-features = false, features = ["deflate"] }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cfg-match = { workspace = true }
directories = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
sha2 = { workspace = true }
nitro_config = { workspace = true }
nitro_core = { workspace = true }
nitro_net = { workspace = true }
nitro_parse = { workspace = true }
nitro_pkg = { workspace = true }
nitro_plugin = { workspace = true }
nitro_shared = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-std"] }
version-compare = { workspace = true }
zip = { workspace = true }
