[package]
name = "nitro_plugins"
version = "0.1.0"
description = "Standard plugins for Nitrolaunch"
keywords = ["minecraft", "launcher", "game", "mc", "plugin"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "nitro_plugin_automate"
path = "plugins/automate/main.rs"

[[bin]]
name = "nitro_plugin_backup"
path = "plugins/backup/main.rs"

[[bin]]
name = "nitro_plugin_beet"
path = "plugins/beet/main.rs"

[[bin]]
name = "nitro_plugin_better_jsons"
path = "plugins/better_jsons/main.rs"

[[bin]]
name = "nitro_plugin_cleanup"
path = "plugins/cleanup/main.rs"

[[bin]]
name = "nitro_plugin_curseforge_api"
path = "plugins/curseforge_api/main.rs"

[[bin]]
name = "nitro_plugin_docs"
path = "plugins/docs/main.rs"

[[bin]]
name = "nitro_plugin_fabric_quilt"
path = "plugins/fabric_quilt/main.rs"

[[bin]]
name = "nitro_plugin_forge"
path = "plugins/forge/main.rs"

[[bin]]
name = "nitro_plugin_gen_pkg"
path = "plugins/gen_pkg/main.rs"

[[bin]]
name = "nitro_plugin_glfw_fix"
path = "plugins/glfw_fix/main.rs"

[[bin]]
name = "nitro_plugin_modrinth"
path = "plugins/modrinth/main.rs"

[[bin]]
name = "nitro_plugin_modrinth_api"
path = "plugins/modrinth_api/main.rs"

[[bin]]
name = "nitro_plugin_multimc_transfer"
path = "plugins/multimc_transfer/main.rs"

[[bin]]
name = "nitro_plugin_nitro_transfer"
path = "plugins/nitro_transfer/main.rs"

[[bin]]
name = "nitro_plugin_options"
path = "plugins/options/main.rs"

[[bin]]
name = "nitro_plugin_packhost"
path = "plugins/packhost/main.rs"

[[bin]]
name = "nitro_plugin_paper"
path = "plugins/paper/main.rs"

[[bin]]
name = "nitro_plugin_template_share"
path = "plugins/template_share/main.rs"

[[bin]]
name = "nitro_plugin_smithed"
path = "plugins/smithed/main.rs"

[[bin]]
name = "nitro_plugin_smithed_api"
path = "plugins/smithed_api/main.rs"

[[bin]]
name = "nitro_plugin_server_restart"
path = "plugins/server_restart/main.rs"

[[bin]]
name = "nitro_plugin_sponge"
path = "plugins/sponge/main.rs"

[[bin]]
name = "nitro_plugin_stats"
path = "plugins/stats/main.rs"

[[bin]]
name = "nitro_plugin_webtools"
path = "plugins/webtools/main.rs"

[[bin]]
name = "nitro_plugin_xmcl_transfer"
path = "plugins/xmcl_transfer/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-print = { workspace = true }
glob = { workspace = true }
iso8601-timestamp = { workspace = true }
itertools = { workspace = true }
nitrolaunch = { workspace = true }
nitro_core = { workspace = true }
nitro_mods = { workspace = true }
nitro_net = { workspace = true }
nitro_options = { workspace = true }
nitro_plugin = { workspace = true, features = ["executable_api"] }
nitro_pkg = { workspace = true }
nitro_pkg_gen = { workspace = true }
nitro_shared = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
termimad = { workspace = true }
tokio = { workspace = true }
version-compare = { workspace = true }
zip = { workspace = true }

[build-dependencies]
zip = { workspace = true }
