[package]
name = "nitro_cli"
version = "0.27.0"
description = "The command-line interface for Nitrolaunch"
keywords = ["minecraft", "launcher", "game", "mc", "cli"]
categories = ["games", "command-line-utilities"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "nitro"
path = "src/main.rs"

[features]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
color-print = { workspace = true }
inquire = { workspace = true }
itertools = { workspace = true }
nitrolaunch = { workspace = true, features = ["builder"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
termimad = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
which = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = "2.0"
