[package]
name = "nitro_config"
version = "0.28.0"
description = "Serialization for Nitrolaunch configuration"
keywords = ["minecraft", "launcher", "game", "mc"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
schema = ["dep:schemars"]

[dependencies]
anyhow = { workspace = true }
cfg-match = { workspace = true }
nitro_pkg = { workspace = true }
nitro_shared = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
