[package]
name = "nitro_instance"
version = "0.29.0"
description = "Instance file and addon management for Nitrolaunch"
keywords = ["minecraft", "launcher", "game", "mc"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
schema = ["dep:schemars"]

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
nitro_shared = { workspace = true }
