[package]
name = "nitro_net"
version = "0.27.0"
description = "Various network APIs for Nitrolaunch"
keywords = ["minecraft", "launcher", "game", "mc", "api"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
nitro_shared = { workspace = true }
nutype = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
