[package]
name = "nitro_pkg"
version = "0.26.0"
description = "Package standard for Nitrolaunch"
keywords = ["minecraft", "launcher", "game", "mc"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
schema = ["dep:schemars", "nitro_parse/schema", "nitro_shared/schema"]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
nitro_parse = { workspace = true }
nitro_shared = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
