[package]
name = "nitro_pkg_gen"
version = "0.28.0"
description = "Nitrolaunch package generation from existing platforms"
keywords = ["minecraft", "launcher", "game", "mc"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
nitro_core = { workspace = true }
nitro_net = { workspace = true }
nitro_pkg = { workspace = true }
nitro_shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
version-compare = { workspace = true }
