[package]
name = "nitro_plugin"
version = "0.5.0"
description = "Plugin loading and definition for Nitrolaunch"
keywords = ["minecraft", "launcher", "game", "mc", "plugin"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["api"]
api = []

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
itertools = { workspace = true }
nitro_config = { workspace = true }
nitro_core = { workspace = true }
nitro_shared = { workspace = true }
nitro_pkg = { workspace = true }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
