[package]
name = "nitro_plugin"
version = "0.27.0"
description = "Plugin loading and definition for Nitrolaunch"
keywords = ["minecraft", "launcher", "game", "mc", "plugin"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["executable_api", "wasm_api", "host"]
host = [
	"tokio/process",
	"tokio/fs",
	"tokio/rt-multi-thread",
	"tokio/io-std",
	"dep:wasmtime",
	"dep:wasmtime-wasi",
	"dep:wit-bindgen",
]
executable_api = []
wasm_api = ["dep:wit-bindgen"]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
itertools = { workspace = true }
nitro_config = { workspace = true }
nitro_shared = { workspace = true }
nitro_pkg = { workspace = true }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
tokio = { version = "1.37.0", features = ["rt", "sync"] }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
wit-bindgen = { workspace = true, optional = true }
