[package]
name = "nitro_shared"
version = "0.27.0"
description = "Shared libraries and utilities for Nitrolaunch crates"
keywords = ["minecraft", "launcher", "game", "mc"]
categories.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
schema = ["dep:schemars"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cfg-match = { workspace = true }
itertools = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
sys-locale = { workspace = true }
thiserror = { workspace = true }
