[package]
name = "nitro_plugin_automate"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
nitro_plugin = { version = "0.28.0", path = "../../../crates/plugin", default-features = false, features = [
	"wasm_api",
] }
serde_json = { workspace = true }
