[package]
name = "nitro_plugin_webtools"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[lib]
name = "nitro_plugin_webtools"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nitro_config = { workspace = true }
nitro_plugin = { version = "0.28.0", path = "../../../crates/plugin", default-features = false, features = [
	"wasm_api",
] }
