[package]
name = "nitro_plugin_zulu"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
libflate = { workspace = true }
nitro_config = { workspace = true }
nitro_plugin = { version = "0.28.0", path = "../../../crates/plugin", default-features = false, features = [
	"wasm_api",
] }
nitro_shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
